--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+  .nav-item {
+    @apply h-full mr-3 px-3 py-1.5 font-semibold rounded-lg;
+  }
+  .nav-item:hover{
+    @apply bg-gray-400 bg-opacity-40;
+  }
+
+}
