--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,23 @@
 
 @layer components{
   .nav-item {
-    @apply h-full mr-3 px-3 py-1.5 font-semibold rounded-lg;
+    @apply h-full mr-3 px-3 py-2 font-semibold rounded-lg;
   }
   .nav-item:hover{
     @apply bg-gray-400 bg-opacity-40;
   }
-
+  .footer{
+    @apply relative ml-1 mt-auto mb-1;
+  }
+  .font{
+    @apply font-mono;
+  }
+  .loggedusername{
+    @apply absolute left-1/2 w-48 h-7 mt-2 text-center;
+    margin-left: -96px;
+  }
+  .message{
+    @apply absolute left-1/2 w-56 h-7 mt-4 text-center;
+    margin-left: -112px;
+  }
 }
